refactor alertas